<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MCTest</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    
    <!-- Option menu strings  -->
    <string name="exit">Exit</string>
    <string name="connect_vest">Connect 2 Vest</string>
    <string name="change_mode"> Change Mode</string>
    
    <!--  UI Strings  -->
    <string name="bt_L1">L1</string>
    <string name="bt_L2">L2</string>
    <string name="bt_L3">L3</string>
    
    <string name="bt_R1">R1</string>
    <string name="bt_R2">R2</string>
    <string name="bt_R3">R3</string>
    
    <string name="bt_F1">F1</string>
    <string name="bt_F2">F2</string>
    <string name="bt_F3">F3</string>
    
    <string name="bt_B1">B1</string>
    <string name="bt_B2">B2</string>
    <string name="bt_B3">B3</string>
    
    <string name="stop">Stop</string>
    
    <string name="signal_length">Signal Length (0.1 &#8211; 2s)</string>
    
    <!-- Signal Length Slider Constants in milliseconds-->
    <integer name="max_signal_length">2000</integer>
    <integer name="min_signal_length">100</integer>
    <integer name="default_signal_length">300</integer>
    
    <!-- Mode Strings -->
    <string-array name = "modes">
        <item>Light Mode</item>
        <item>Vibe Mode</item>
    </string-array>
    
    <!--  Mode Dialog Title -->
    <string name="change_mode_title">Change Mode</string>
    
</resources>