<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/control_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".HaptigoTestActivity" 
    >

    <Button
        android:id="@+id/bt_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="#FF0000"
        android:height="50dp"
        android:text="@string/stop"
        android:width="50dp"
        android:onClick="onInstructionClicked"/>

    <Button
        android:id="@+id/bt_f1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/bt_stop"
        android:layout_centerHorizontal="true"
        android:text="@string/bt_F1"
        android:width="80dp" 
        android:height="80dp"
        android:onClick="onInstructionClicked"/>

<!--     <Button
        android:id="@+id/bt_f2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/bt_f1"
        android:layout_centerHorizontal="true"
        android:text="@string/bt_F2"
        android:width="100dp" 
        android:onClick="onInstructionClicked"/>

    <Button
        android:id="@+id/bt_f3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/bt_f2"
        android:layout_centerHorizontal="true"
        android:text="@string/bt_F3"
        android:width="150dp"
        android:onClick="onInstructionClicked"/> -->

    <Button
        android:id="@+id/bt_b1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bt_stop"
        android:layout_centerHorizontal="true"
        android:text="@string/bt_B1"
        android:width="60dp" 
        android:onClick="onInstructionClicked"/>

    <Button
        android:id="@+id/bt_b2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bt_b1"
        android:layout_centerHorizontal="true"
        android:text="@string/bt_B2"
        android:width="100dp" 
        android:onClick="onInstructionClicked"/>

    <Button
        android:id="@+id/bt_b3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bt_b2"
        android:layout_centerHorizontal="true"
        android:text="@string/bt_B3"
        android:width="150dp" 
        android:onClick="onInstructionClicked"/>

    <Button
        android:id="@+id/bt_l1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@id/bt_stop"
        android:height="60dp"
        android:text="@string/bt_L1" 
        android:onClick="onInstructionClicked"/>

    <Button
        android:id="@+id/bt_l2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@id/bt_l1"
        android:height="100dp"
        android:text="@string/bt_L2" 
        android:onClick="onInstructionClicked"/>

    <Button
        android:id="@+id/bt_l3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@id/bt_l2"
        android:height="150dp"
        android:text="@string/bt_L3" 
        android:onClick="onInstructionClicked"/>

    <Button
        android:id="@+id/bt_r1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@id/bt_stop"
        android:height="60dp"
        android:text="@string/bt_R1" 
        android:onClick="onInstructionClicked"/>

    <Button
        android:id="@+id/bt_r2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@id/bt_r1"
        android:height="100dp"
        android:text="@string/bt_R2" 
        android:onClick="onInstructionClicked"/>

    <Button
        android:id="@+id/bt_r3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@id/bt_r2"
        android:height="150dp"
        android:text="@string/bt_R3" 
        android:onClick="onInstructionClicked"/>
    
	<TextView 
	    android:id="@+id/text_status"
	    android:text="@string/stop"
	    android:layout_alignParentBottom="true"
	    android:layout_centerHorizontal="true"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:height="50dp"
	    android:gravity="center"/>
	
	<TextView 
	    android:id="@+id/text_signal_length_label"
	    android:text="@string/signal_length"
	    android:layout_alignParentTop="true"
	    android:layout_alignParentLeft="true"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:height="50dp"
	    android:gravity="center"/>
	
	<TextView 
	    android:id="@+id/text_signal_length_value"
	    android:text="@integer/default_signal_length"
	    android:layout_alignParentTop="true"
	    android:layout_alignParentRight="true"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:height="50dp"
	    android:gravity="center"/>
	
	<SeekBar
	    android:id="@+id/slider_signal_length"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/text_signal_length_label" 
	    android:max="@integer/max_signal_length"
	    android:progress="@integer/default_signal_length"
	    />

</RelativeLayout>